style: update colour of helper text for better contrast. Issue: #33

--- a/toy_tribe/static/css/style.css
+++ b/toy_tribe/static/css/style.css
@@ -278,7 +278,7 @@ main {
 }
 
 #signup-form span {
-    color: #808080;
+    color: #333A3F;
     margin-bottom: 20px;
 }
 
